AC_INIT([Makefile.in], 1.0)

VERS=`cat ../../kernel/linux/pf_ring.h | grep RING_VERSION | head -1 | cut -d '"' -f 2`
PLATFORM=`uname -p`

if which git >/dev/null; then
   REVISION=`git rev-list --all |wc -l`
   GIT_BRANCH=`git branch --no-color|cut -d ' ' -f 2`
   GIT_HASH=`git log --pretty=format:"%H (%ad)"|head -1`
else
   REVISION=nr
fi

MACHINE=`uname -m`

if test $MACHINE = "x86_64"; then
   EXTN="amd64"
else
   EXTN="i386"
fi

dnl> The step below is necessary to make sure the package will work on the
dnl> target system without having to deal with ldconfig
dnl> if test -d /opt/snf/lib/;       then sudo cp /opt/snf/lib/libsnf.so         /lib64; ln -s /lib64/libsnf.so /lib64/libsnf.so.0; fi

DATE=`date -R`
KERNEL=`uname -r`
CENTOS_RELEASE=`cat /etc/centos-release | cut -d ' ' -f 3|cut -d '.' -f 1`

if test "$CENTOS_RELEASE" -eq 6; then
  EXTRA_REQUIRES=""
else
  EXTRA_REQUIRES=", kmod"
fi

AC_SUBST(VERS)
AC_SUBST(EXTN)
AC_SUBST(DATE)
AC_SUBST(KERNEL)
AC_SUBST(PLATFORM)
AC_SUBST(REVISION)
AC_SUBST(GIT_BRANCH)
AC_SUBST(GIT_HASH)
AC_SUBST(EXTRA_REQUIRES)

AC_CONFIG_FILES(Makefile)
AC_CONFIG_FILES(pfring.spec)

AC_OUTPUT
