AC_INIT([Makefile.in], 1.0)

VERS=`../version.sh --release`
PLATFORM=`uname -p`

if which git >/dev/null; then
   REVISION=`../version.sh --revision`
   GIT_HASH=`../version.sh --hash`
   GIT_BRANCH=`git branch | grep \* | cut -d ' ' -f2`
else
   REVISION=nr
fi

MACHINE=`uname -m`

if test $MACHINE = "x86_64"; then
   EXTN="amd64"
else
   EXTN="i386"
fi

if [ test -d $HOME/nDPI ]; then
  NDPI_VERSION=`$HOME/nDPI/packages/version.sh --version`
  NDPI_DEP="ndpi = $NDPI_VERSION"
else
  NDPI_DEP=""
fi

dnl> The step below is necessary to make sure the package will work on the
dnl> target system without having to deal with ldconfig
dnl> if test -d /opt/snf/lib/;       then sudo cp /opt/snf/lib/libsnf.so         /lib64; ln -s /lib64/libsnf.so /lib64/libsnf.so.0; fi

DATE=`date -R`
KERNEL=`uname -r`
CENTOS_RELEASE=`cat /etc/centos-release | cut -d ' ' -f 3|cut -d '.' -f 1`

if test "$CENTOS_RELEASE" -eq 6; then
  EXTRA_REQUIRES=""
else
  EXTRA_REQUIRES=", kmod"
fi

AC_SUBST(VERS)
AC_SUBST(EXTN)
AC_SUBST(DATE)
AC_SUBST(KERNEL)
AC_SUBST(PLATFORM)
AC_SUBST(REVISION)
AC_SUBST(GIT_BRANCH)
AC_SUBST(GIT_HASH)
AC_SUBST(EXTRA_REQUIRES)
AC_SUBST(NDPI_DEP)

AC_CONFIG_FILES(Makefile)
AC_CONFIG_FILES(pfring.spec)

AC_OUTPUT
