AC_INIT([Makefile.in], 1.0)

I40E="i40e"
I40E_VERSION=`grep "I40E=" Makefile|cut -d '-' -f 2`
IXGBE="ixgbe"
IXGBE_VERSION=`grep "IXGBE=" Makefile|cut -d '-' -f 2`
IGB="igb"
IGB_VERSION=`grep "IGB=" Makefile|cut -d '-' -f 2`
E1000E="e1000e"
E1000E_VERSION=`grep "E1000E=" Makefile|cut -d '-' -f 2`
REVISION=`git rev-list --all |wc -l`

AC_SUBST(I40E)
AC_SUBST(I40E_VERSION)
AC_SUBST(IXGBE)
AC_SUBST(IXGBE_VERSION)
AC_SUBST(IGB)
AC_SUBST(IGB_VERSION)
AC_SUBST(E1000E)
AC_SUBST(E1000E_VERSION)
AC_SUBST(REVISION)

AC_CONFIG_FILES(Makefile.dkms.i40e)
AC_CONFIG_FILES(Makefile.dkms.ixgbe)
AC_CONFIG_FILES(Makefile.dkms.igb)
AC_CONFIG_FILES(Makefile.dkms.e1000e)
AC_CONFIG_FILES(dkms.conf.i40e)
AC_CONFIG_FILES(dkms.conf.ixgbe)
AC_CONFIG_FILES(dkms.conf.igb)
AC_CONFIG_FILES(dkms.conf.e1000e)

AC_OUTPUT
